[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PlayerScore" type="Label" parent="."]
margin_left = 50.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="EnemyScore" type="Label" parent="."]
margin_left = 720.0
margin_top = 1.0
margin_right = 765.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="EndLabel" type="Label" parent="."]
anchor_left = 0.517
anchor_top = 0.43
anchor_right = 0.517
anchor_bottom = 0.43
margin_left = -166.408
margin_top = -39.0
margin_right = 166.592
margin_bottom = 39.0
custom_fonts/font = SubResource( 3 )

[node name="EndTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
margin_left = 487.0
margin_top = 297.0
margin_right = 528.0
margin_bottom = 317.0
text = "Start"

[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_Button_pressed"]
